# pairs

./: .gitignore  LICENSE  README.md  pyproject.toml
db/: pairs.db
src/: app.py  main.py  page.py  session.py
src/models/: account.py  const.py  custom_pydantic.py  exception.py  history.py  model.py  page_model.py
src/pages/private/: account_info.py  delete.py  history.py
src/pages/public/: login.py  recommend.py  register.py
src/pages/utils/: streamlit_util.py
src/services/: account_repository.py  history_repository.py  recommendation_service.py  user_repository.py
